# rs-iiif-browser

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
assets/: manifest.json
assets/shaders/: custom_material.wgsl
java/: settings.gradle
java/app/: CMakeLists.txt  build.gradle
java/app/src/main/: AndroidManifest.xml
java/app/src/main/cpp/: dummy.cpp
java/app/src/main/java/org/leungkkf/rs_iiif_browser/: MainActivity.java
java/gradle/: libs.versions.toml
java/gradle/wrapper/: gradle-wrapper.properties
scripts/: build_android.sh  build_web.sh
src/: _main copy.rs.backup  app.rs  app_settings.rs  asset_loading.rs  camera.rs  camera_ext.rs  fonts.rs  iiif.rs  iiif_json.rs  image.rs  input.rs  keyboard_input.rs  lib.rs  main.rs  main_camera.rs  minimap.rs  mouse_input.rs  presentation.rs  rdf.rs  rendering.rs  tile.rs  tile_rendering.rs  tiled_image.rs  web.rs
src/app/: app_settings.rs  app_state.rs
src/camera/: camera_ext.rs  main_camera.rs  pan_orbit_state_3d.rs  pan_zoom_state_2d.rs
src/iiif/: image.rs  image_v2.rs  image_v3.rs  manifest.rs  manifest_v2.rs  manifest_v3.rs  one_or_many.rs  presentation.rs  presentation_v2.rs  presentation_v3.rs
src/iiif_json/: manifest.rs  manifest_v2.rs  manifest_v3.rs  one_or_many.rs
src/input/: keyboard.rs  mouse.rs  touch.rs
src/presentation/: manifest.rs  model.rs  presentation_info.rs  ui.rs
src/rdf/: dataset_ext.rs
src/rendering/: model.rs  model_image.rs  pipeline_checker.rs  tile.rs  tiled_image.rs
src/tile_rendering/: tile.rs  tiled_image.rs
