[package]
name = "rs-iiif-browser"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { version = "0.2", features = ["js"], package = "getrandom" }
uuid = { version = "1.17", features = ["js"] } # This can be changed with features `rng-getrandom` or `rng-rand`, but one must be specified

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
image = "0.25.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
ehttp = { path="/home/kelvin/code/ehttp/ehttp" }

# Waiting for egui release to include the fix.
# egui_extras = { git = "https://github.com/leungkkf/egui.git", branch="fix-media-type-optional-parameters", features = ["all_loaders"] }
egui_extras = { path = "/home/kelvin/code/egui/crates/egui_extras", features = ["all_loaders"] }
bevy_egui = { path="/home/kelvin/code/bevy_egui" }
egui-notify = { path="/home/kelvin/code/egui-notify" }

bevy = { version="0.17", default-features = false, features = [
    "async_executor",
    "bevy_asset",
    "bevy_input_focus",
    "bevy_log",
    "bevy_state",
    "bevy_window",
    "std",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "wayland",
    "webgl2",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_post_process",
    "bevy_ui",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_ui_render",
    "gif",
    "png",
    "jpeg",
    "tiff",
    "webp",
    "https"
] }
